Updated with each member's topic

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Programming Black Formative Groupwork wk 4.
-William Henderson, Jacob Dear, Tony Dalziel, Matt Phillips
+William Henderson(The Internet), Jacob Dear(Healthcare), Tony Dalziel (Social Media), Matt Phillips(Predicting/Preventing Catastophes)
